syntax = "proto3";
package blog;

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {}
}

message CreateBlogRequest {
     Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;
}

message Blog {
     int32 id = 1;
     int32 author_id = 2;
     string title = 3;
     string content = 4;
     string name = 5;
}

